--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <script defer src="assets/js/main.js"></script>
   </head>
   <body>
-    <h1>Agenda Telefonica</h1>
+    <h1>Gerez Roque Emanuel - Agenda Telefonica</h1>
   </body>
 </html>
